<resources>
    <string name="app_name">Mini Java Football League</string>
    <string name="teama_name">FC Java</string>
    <string name="teamb_name">Java United</string>
    <string name="games">Games played: </string>
    <string name="pts">Pts. </string>
    <string name="gamesNoB">0</string>
    <string name="gamesNoA">0</string>
    <string name="team_score">0</string>
    <string name="won">Won</string>
    <string name="drawn">Drawn</string>
    <string name="lost">Lost</string>
    <string name="btn_reset">Start new season</string>
</resources>
