<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.minijavafootballleague.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padd_16"
                    android:text="@string/teama_name"
                    android:textColor="@color/forStrings"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/gamesA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/games"
                        android:textColor="@color/forStrings"
                        android:textSize="@dimen/txtSize_16" />

                    <TextView
                        android:id="@+id/team_a_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="10dp"
                        android:text="@string/gamesNoA"
                        android:textColor="@color/forStrings"
                        android:textSize="@dimen/txtSize_16" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_24"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/team_score"
                        android:textColor="@color/forStrings"
                        android:textSize="56sp" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_8"
                    android:layout_marginLeft="@dimen/marg_24"
                    android:layout_marginRight="@dimen/marg_24"
                    android:onClick="addWinTeamA"
                    android:text="@string/won" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_8"
                    android:layout_marginLeft="@dimen/marg_24"
                    android:layout_marginRight="@dimen/marg_24"
                    android:onClick="addDrawnTeamA"
                    android:text="@string/drawn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_8"
                    android:layout_marginLeft="@dimen/marg_24"
                    android:layout_marginRight="@dimen/marg_24"
                    android:onClick="lostTeamA"
                    android:text="@string/lost" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padd_16"
                    android:text="@string/teamb_name"
                    android:textColor="@color/forStrings"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/gamesB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/games"
                        android:textColor="@color/forStrings"
                        android:textSize="@dimen/txtSize_16" />

                    <TextView
                        android:id="@+id/team_b_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="10dp"
                        android:text="@string/gamesNoB"
                        android:textColor="@color/forStrings"
                        android:textSize="@dimen/txtSize_16" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_24"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/team_score"
                        android:textColor="@color/forStrings"
                        android:textSize="56sp" />
                </LinearLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_8"
                    android:layout_marginLeft="@dimen/marg_24"
                    android:layout_marginRight="@dimen/marg_24"
                    android:onClick="addWinTeamB"
                    android:text="@string/won" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_8"
                    android:layout_marginLeft="@dimen/marg_24"
                    android:layout_marginRight="@dimen/marg_24"
                    android:onClick="addDrawnTeamB"
                    android:text="@string/drawn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_8"
                    android:layout_marginLeft="@dimen/marg_24"
                    android:layout_marginRight="@dimen/marg_24"
                    android:onClick="lostTeamB"
                    android:text="@string/lost" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetScore"
                android:text="@string/btn_reset" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>




